--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <img src="./Logo_Mighty_ducks-01.png" alt="logo" width="120">
+        <img src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
         <h1>Mighty Ducks Hockey League</h1>
     </header>
     <nav>
@@ -22,7 +22,7 @@
 <main>
     <div>
         <figure>
-            <img src="hockey_2.jpg" alt="logo" width="300">
+            <img src="/img/hockey_2.jpg" alt="logo" width="300">
         </figure>
         <article>
             <h3>Mision</h3>
