--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <img src="./Logo_Mighty_ducks-01.png" alt="logo" width="120">
+        <img src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
         <h1>Mighty Ducks Hockey League</h1>
     </header>
     <nav>
@@ -22,7 +22,7 @@
     <main>
         <div>
             <figure>
-                <img src="hockey_3.jpg" alt="logo" width="300">
+                <img src="/img/hockey_3.jpg" alt="logo" width="300">
             </figure>
             <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
             <p>We reply to your email as soon as we can.</p>
