--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <img src="./Logo_Mighty_ducks-01.png" alt="logo" width="120">
+        <img src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
         <h1>Mighty Ducks Hockey League</h1>
     </header>
     <nav>
@@ -22,7 +22,7 @@
     <main>
         <section>
             <figure>
-                <img src="hockey_1.jpg" alt="logo" width="300">
+                <img src="/img/hockey_1.jpg" alt="logo" width="300">
             </figure>
             <h3>Upcoming Events</h3>
             <article>
@@ -39,8 +39,6 @@
             </article>
         </section>
     </main>
-    
-
 </body>
 
 </html>
