--- a/contact.html
+++ b/contact.html
@@ -7,25 +7,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty Ducks Hockey League</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/css/style.css">
+    <!-- <link rel="stylesheet" href="/css/diseno1.css"> -->
+    <!-- <link rel="stylesheet" href="/css/diseno2.css">  -->
 </head>
 
 <body>
     <header>
-        <img src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
         <h1>Mighty Ducks Hockey League</h1>
+        <div id="header2">
+            <nav class="diseno2">
+                <a href="./index.html">Home</a>
+                <a href="./about.html">About MDHL</a>
+                <a id="actual" href="#">Contact</a>
+            </nav>
+        </div>
     </header>
-    <nav>
-        <a href="./index.html">Home</a> |
-        <a href="./about.html">About MDHL</a> |
-        <a href="#">contact</a>
-    </nav>
+
     <main>
-        <div>
-            <figure>
+        <div id="titulo">
+            <h3>Contact</h3>
+            <img id="logo" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
+        </div>
+        <div id="contenido">
+            <img class="diseno2" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
+            <nav class="diseno1">
+                <a href="./index.html">Home</a>
+                <a href="./about.html">About MDHL</a>
+                <a id="actual" href="#">Contact</a>
+            </nav>
+            <div class="section">
+                <article>
+                    <!--             <figure>
                 <img src="/img/hockey_3.jpg" alt="logo" width="300">
-            </figure>
-            <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
-            <p>We reply to your email as soon as we can.</p>
+            </figure> -->
+                    <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
+                    <p>We reply to your email as soon as we can.</p>
+                </article>
+            </div>
         </div>
     </main>
 
