--- a/index.html
+++ b/index.html
@@ -7,37 +7,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty Ducks Hockey League</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/css/style.css">
+    <!-- <link rel="stylesheet" href="/css/diseno1.css">
+    <link rel="stylesheet" href="/css/diseno2.css"> -->
 </head>
 
 <body>
     <header>
-        <img src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
         <h1>Mighty Ducks Hockey League</h1>
+        <div id="header2">
+            <nav class="diseno2">
+                <a id="actual" href="#">Home</a>
+                <a href="./about.html">About</a>
+                <a href="./contact.html">Contact</a>
+            </nav>
+        </div>
     </header>
-    <nav>
-        <a href="#">Home</a> |
-        <a href="./about.html">About MDHL</a> |
-        <a href="./contact.html">contact</a>
-    </nav>
+
     <main>
-        <section>
-            <figure>
-                <img src="/img/hockey_1.jpg" alt="logo" width="300">
-            </figure>
+        <div id="titulo">
             <h3>Upcoming Events</h3>
-            <article>
-                <h4>August 4</h4>
-                <p>MDSL Fundraiser</p>
-            </article>
-            <article>
-                <h4>August 16</h4>
-                <p>Season Kick-off: Meet the Teams</p>
-            </article>
-            <article>
-                <h4>September 1</h4>
-                <p>MDSL Fundraiser</p>
-            </article>
-        </section>
+            <img class="diseno1" id="logo" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
+        </div>
+        <div id="contenido">
+            <img class="diseno2" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
+            <nav class="diseno1">
+                <a id="actual" href="#">Home</a>
+                <a href="./about.html">About MDHL</a>
+                <a href="./contact.html">Contact</a>
+            </nav>
+
+            <section>
+                <!-- <figure>
+                <img src="/img/hockey_1.jpg" alt="logo" width="300">
+            </figure> -->
+                <article>
+                    <h4>August 4</h4>
+                    <p>MDSL Fundraiser</p>
+                </article>
+                <article>
+                    <h4>August 16</h4>
+                    <p>Season Kick-off: Meet the Teams</p>
+                </article>
+                <article>
+                    <h4>September 1</h4>
+                    <p>MDSL Fundraiser</p>
+                </article>
+            </section>
+        </div>
     </main>
 </body>
 
