--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty Ducks Hockey League</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/css/style.css">
-    <!-- <link rel="stylesheet" href="/css/diseno1.css">
-    <link rel="stylesheet" href="/css/diseno2.css"> -->
+    <!-- <link rel="stylesheet" href="/css/style.css"> -->
+    <link rel="stylesheet" href="/css/diseno1.css">
+    <!-- <link rel="stylesheet" href="/css/diseno2.css"> -->
 </head>
 
 <body>
@@ -27,17 +27,19 @@
     <main>
         <div id="titulo">
             <h3>Upcoming Events</h3>
-            <img class="diseno1" id="logo" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
+            <img class="diseno1" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
         </div>
         <div id="contenido">
-            <img class="diseno2" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
-            <nav class="diseno1">
-                <a id="actual" href="#">Home</a>
-                <a href="./about.html">About MDHL</a>
-                <a href="./contact.html">Contact</a>
-            </nav>
+            <aside>
+                <img class="diseno2" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
+                <nav class="diseno1">
+                    <a class="actual" href="#">Home</a>
+                    <a href="./about.html">About MDHL</a>
+                    <a href="./contact.html">Contact</a>
+                </nav>
+            </aside>
 
-            <section>
+            <div class="section">
                 <!-- <figure>
                 <img src="/img/hockey_1.jpg" alt="logo" width="300">
             </figure> -->
@@ -53,7 +55,7 @@
                     <h4>September 1</h4>
                     <p>MDSL Fundraiser</p>
                 </article>
-            </section>
+            </div>
         </div>
     </main>
 </body>
