--- a/about.html
+++ b/about.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty Ducks Hockey League</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/css/style.css">
-<!--     <link rel="stylesheet" href="/css/diseno1.css">
-    <link rel="stylesheet" href="/css/diseno2.css"> -->
+    <!-- <link rel="stylesheet" href="/css/style.css"> -->
+    <link rel="stylesheet" href="/css/diseno1.css">
+    <!-- <link rel="stylesheet" href="/css/diseno2.css"> -->
 </head>
 
 <body>
@@ -17,13 +17,13 @@
         <h1>Mighty Ducks Hockey League</h1>
         <div id="header2">
             <nav class="diseno2">
-        <a href="./index.html">Home</a>
-        <a id="actual" href="#">About MDHL</a>
-        <a href="./contact.html">Contact</a>
-    </nav>
-    </div>
+                <a href="./index.html">Home</a>
+                <a class="actual" href="#">About MDHL</a>
+                <a href="./contact.html">Contact</a>
+            </nav>
+        </div>
     </header>
-    
+
     <main>
         <div id="titulo">
             <h3 class="diseno1">About MDHL</h3>
@@ -31,29 +31,36 @@
             <img id="logo" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
         </div>
         <div id="contenido">
-            <img class="diseno2" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
-            <nav class="diseno1">
-                <a href="./index.html">Home</a>
-                <a id="actual" href="#">About MDHL</a>
-                <a href="./contact.html">Contact</a>
-            </nav>
+            <aside>
+                <img class="diseno2" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
+                <nav class="diseno1">
+                    <a href="./index.html">Home</a>
+                    <a class="actual" href="#">About MDHL</a>
+                    <a href="./contact.html">Contact</a>
+                </nav>
+            </aside>
             <!-- <figure>
                 <img src="/img/hockey_2.jpg" alt="logo" width="300">
             </figure> -->
             <div class="section">
                 <article>
-                    <h3>Mision</h3>
-                    <p>To support young athletes living Chicago's northside neighborhood, who have an interest in learning and playing soccer, with opportunities to learn and practice skills related to the game
+                    <h4 class="about">Mision</h4>
+                    <p>To support young athletes living Chicago's northside neighborhood, who have an interest in
+                        learning and playing soccer, with opportunities to learn and practice skills related to the game
                         of hockey, specifically those skills around team cooperation and good sportsmanship</p>
                 </article>
                 <article>
-                    <h3>Vision</h3>
-                    <p>The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes through the building of character, self-discipline, and leadership.</p>
+                    <h4 class="about">Vision</h4>
+                    <p>The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes
+                        through the building of character, self-discipline, and leadership.</p>
                 </article>
                 <article>
-                    <h4>General Information</h4>
-                    <p>The Mighty Ducks Soccer League was established in 1996 to provide athletes residing Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a
-                        member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of parents and previous league members</p>
+                    <h4 class="about">General Information</h4>
+                    <p>The Mighty Ducks Soccer League was established in 1996 to provide athletes residing Chicago's
+                        northside neighborhoods an environment in which to learn and play hockey. To be a
+                        member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside
+                        neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
+                        parents and previous league members</p>
                 </article>
             </div>
         </div>
