--- a/contact.html
+++ b/contact.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty Ducks Hockey League</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/css/style.css">
-    <!-- <link rel="stylesheet" href="/css/diseno1.css"> -->
-    <!-- <link rel="stylesheet" href="/css/diseno2.css">  -->
+    <!-- <link rel="stylesheet" href="/css/style.css"> -->
+    <link rel="stylesheet" href="/css/diseno1.css">
+    <!-- <link rel="stylesheet" href="/css/diseno2.css"> -->
 </head>
 
 <body>
@@ -19,7 +19,7 @@
             <nav class="diseno2">
                 <a href="./index.html">Home</a>
                 <a href="./about.html">About MDHL</a>
-                <a id="actual" href="#">Contact</a>
+                <a class="actual" href="#">Contact</a>
             </nav>
         </div>
     </header>
@@ -30,20 +30,22 @@
             <img id="logo" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
         </div>
         <div id="contenido">
-            <img class="diseno2" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
-            <nav class="diseno1">
+                    <aside>
+                        <img class="diseno2" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
+                        <nav class="diseno1">
                 <a href="./index.html">Home</a>
                 <a href="./about.html">About MDHL</a>
-                <a id="actual" href="#">Contact</a>
+                <a class="actual" href="#">Contact</a>
             </nav>
+                    </aside>
             <div class="section">
-                <article>
+                <div id="contacto">
                     <!--             <figure>
                 <img src="/img/hockey_3.jpg" alt="logo" width="300">
             </figure> -->
                     <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
                     <p>We reply to your email as soon as we can.</p>
-                </article>
+                </div>
             </div>
         </div>
     </main>
