diseno2 terminado y arreglos menores

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         <div id="header2">
             <nav class="diseno2">
                 <a href="./index.html">Home</a>
-                <a class="actual" href="#">About MDHL</a>
+                <a class="actual" href="#">About</a>
                 <a href="./contact.html">Contact</a>
             </nav>
         </div>
@@ -28,7 +28,7 @@
         <div id="titulo">
             <h3 class="diseno1">About MDHL</h3>
             <h3 class="diseno2">About</h3>
-            <img id="logo" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
+            <img class="diseno1" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
         </div>
         <div id="contenido">
             <aside>
