--- a/contact.html
+++ b/contact.html
@@ -27,14 +27,14 @@
     <main>
         <div id="titulo">
             <h3>Contact</h3>
-            <img id="logo" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
+            <img class="diseno1" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
         </div>
         <div id="contenido">
                     <aside>
                         <img class="diseno2" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
                         <nav class="diseno1">
                 <a href="./index.html">Home</a>
-                <a href="./about.html">About MDHL</a>
+                <a href="./about.html">About</a>
                 <a class="actual" href="#">Contact</a>
             </nav>
                     </aside>
