--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>Mighty Ducks Hockey League</h1>
         <div id="header2">
             <nav class="diseno2">
-                <a id="actual" href="#">Home</a>
+                <a class="actual" href="#">Home</a>
                 <a href="./about.html">About</a>
                 <a href="./contact.html">Contact</a>
             </nav>
@@ -27,11 +27,11 @@
     <main>
         <div id="titulo">
             <h3>Upcoming Events</h3>
-            <img class="diseno1" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
+            <img class="diseno1" src="/img/Logo_Mighty_ducks-01.png" alt="logo">
         </div>
         <div id="contenido">
             <aside>
-                <img class="diseno2" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
+                <img class="diseno2" src="/img/Logo_Mighty_ducks-01.png" alt="logo">
                 <nav class="diseno1">
                     <a class="actual" href="#">Home</a>
                     <a href="./about.html">About MDHL</a>
