diseño propio mas arreglos

--- a/about.html
+++ b/about.html
@@ -7,8 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty Ducks Hockey League</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <!-- <link rel="stylesheet" href="/css/style.css"> -->
-    <link rel="stylesheet" href="/css/diseno1.css">
+    <!-- diseño propio -->
+    <link rel="stylesheet" href="/css/style.css">
+    <!-- diseño1 -->
+    <!-- <link rel="stylesheet" href="/css/diseno1.css"> -->
+    <!-- diseño2 -->
     <!-- <link rel="stylesheet" href="/css/diseno2.css"> -->
 </head>
 
@@ -38,10 +41,10 @@
                     <a class="actual" href="#">About MDHL</a>
                     <a href="./contact.html">Contact</a>
                 </nav>
+                <figure>
+                    <img id="imagenaside" src="/img/hockey_2.jpg" alt="imagen2">
+                </figure>
             </aside>
-            <!-- <figure>
-                <img src="/img/hockey_2.jpg" alt="logo" width="300">
-            </figure> -->
             <div class="section">
                 <article>
                     <h4 class="about">Mision</h4>
