--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty Ducks Hockey League</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <!-- <link rel="stylesheet" href="/css/style.css"> -->
-    <link rel="stylesheet" href="/css/diseno1.css">
+    <!-- diseño propio -->
+    <link rel="stylesheet" href="/css/style.css">
+    <!-- diseño1 -->
+    <!-- <link rel="stylesheet" href="/css/diseno1.css"> -->
+    <!-- diseño2 -->
     <!-- <link rel="stylesheet" href="/css/diseno2.css"> -->
 </head>
 
@@ -37,12 +40,12 @@
                     <a href="./about.html">About MDHL</a>
                     <a href="./contact.html">Contact</a>
                 </nav>
+                <figure>
+                    <img id="imagenaside" src="/img/hockey_1.jpg" alt="imagen1">
+                </figure>
             </aside>
 
             <div class="section">
-                <!-- <figure>
-                <img src="/img/hockey_1.jpg" alt="logo" width="300">
-            </figure> -->
                 <article>
                     <h4>August 4</h4>
                     <p>MDSL Fundraiser</p>
