--- a/contact.html
+++ b/contact.html
@@ -7,9 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty Ducks Hockey League</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <!-- <link rel="stylesheet" href="/css/style.css"> -->
-    <link rel="stylesheet" href="/css/diseno1.css">
-    <!-- <link rel="stylesheet" href="/css/diseno2.css"> -->
+    <!-- diseño propio -->
+    <link rel="stylesheet" href="/css/style.css">
+    <!-- diseño1 -->
+    <!-- <link rel="stylesheet" href="/css/diseno1.css"> -->
+    <!-- diseño2 -->
+    <!-- <link rel="stylesheet" href="/css/diseno2.css"> --> 
 </head>
 
 <body>
@@ -18,7 +21,7 @@
         <div id="header2">
             <nav class="diseno2">
                 <a href="./index.html">Home</a>
-                <a href="./about.html">About MDHL</a>
+                <a href="./about.html">About</a>
                 <a class="actual" href="#">Contact</a>
             </nav>
         </div>
@@ -30,19 +33,19 @@
             <img class="diseno1" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
         </div>
         <div id="contenido">
-                    <aside>
-                        <img class="diseno2" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
-                        <nav class="diseno1">
-                <a href="./index.html">Home</a>
-                <a href="./about.html">About</a>
-                <a class="actual" href="#">Contact</a>
-            </nav>
-                    </aside>
+            <aside>
+                <img class="diseno2" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
+                <nav class="diseno1">
+                    <a href="./index.html">Home</a>
+                    <a href="./about.html">About</a>
+                    <a class="actual" href="#">Contact</a>
+                </nav>
+                <figure>
+                    <img id="imagenaside" src="/img/hockey_3.jpg" alt="imagen3">
+                </figure>
+            </aside>
             <div class="section">
                 <div id="contacto">
-                    <!--             <figure>
-                <img src="/img/hockey_3.jpg" alt="logo" width="300">
-            </figure> -->
                     <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
                     <p>We reply to your email as soon as we can.</p>
                 </div>
