task3 nuevas paginas sin positions

--- a/aboutMDHL.html
+++ b/aboutMDHL.html
@@ -20,7 +20,9 @@
         <h1>Mighty Ducks Hockey League</h1>
         <div id="header2">
             <nav class="diseno2">
-                <a href="./index.html">Home</a>
+                <a href="./home.html">Home</a>
+                <a href="./game_info.html">Game Info</a>
+                <a href="./rules.html"> RULES OF PLAY</a>
                 <a class="actual" href="#">About</a>
                 <a href="./contact.html">Contact</a>
             </nav>
@@ -37,7 +39,9 @@
             <aside>
                 <img class="diseno2" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
                 <nav class="diseno1">
-                    <a href="./index.html">Home</a>
+                <a href="./home.html">Home</a>
+                    <a href="./game_info.html">Game Info</a>
+                    <a href="./rules.html"> RULES OF PLAY</a>
                     <a class="actual" href="#">About MDHL</a>
                     <a href="./contact.html">Contact</a>
                 </nav>
