--- a/rules.html
+++ b/rules.html
@@ -12,7 +12,7 @@
     <!-- diseño1 -->
     <!-- <link rel="stylesheet" href="/css/diseno1.css"> -->
     <!-- diseño2 -->
-    <!-- <link rel="stylesheet" href="/css/diseno2.css"> --> 
+    <!-- <link rel="stylesheet" href="/css/diseno2.css"> -->
 </head>
 
 <body>
@@ -22,27 +22,27 @@
             <nav class="diseno2">
                 <a href="./home.html">Home</a>
                 <a href="./game_info.html">Game Info</a>
-                <a href="./rules.html"> RULES OF PLAY</a>
+                <a class="actual" href="#"> RULES OF PLAY</a>
                 <a href="./aboutMDHL.html">About</a>
-                <a class="actual" href="#">Contact</a>
+                <a href="./contact.html">Contact</a>
             </nav>
         </div>
     </header>
 
     <main>
         <div id="titulo">
-            <h3>Contact</h3>
+            <h3>RULES OF PLAY & POLICIES</h3>
             <img class="diseno1" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
         </div>
         <div id="contenido">
             <aside>
                 <img class="diseno2" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
                 <nav class="diseno1">
-                    <a href="./home.html">Home</a>
+                <a href="./home.html">Home</a>
                     <a href="./game_info.html">Game Info</a>
-                    <a href="./rules.html"> RULES OF PLAY</a>
-                    <a href="./aboutMDHL.html">About MDHL</a>
-                    <a class="actual" href="#">Contact</a>
+                    <a class="actual" href="#"> RULES OF PLAY</a>
+                    <a href="./about.html">About</a>
+                    <a href="./contact.html">Contact</a>
                 </nav>
                 <figure>
                     <img id="imagenaside" src="/img/hockey_3.jpg" alt="imagen3">
