--- a/home.html
+++ b/home.html
@@ -21,7 +21,9 @@
         <div id="header2">
             <nav class="diseno2">
                 <a class="actual" href="#">Home</a>
-                <a href="./about.html">About</a>
+                <a href="./game_info.html">Game Info</a>
+                <a href="./rules.html"> RULES OF PLAY</a>
+                <a href="./aboutMDHL.html">About</a>
                 <a href="./contact.html">Contact</a>
             </nav>
         </div>
@@ -37,7 +39,9 @@
                 <img class="diseno2" src="/img/Logo_Mighty_ducks-01.png" alt="logo">
                 <nav class="diseno1">
                     <a class="actual" href="#">Home</a>
-                    <a href="./about.html">About MDHL</a>
+                    <a href="./game_info.html">Game Info</a>
+                    <a href="./rules.html"> RULES OF PLAY</a>
+                    <a href="./aboutMDHL.html">About MDHL</a>
                     <a href="./contact.html">Contact</a>
                 </nav>
                 <figure>
