task3 basico completo

--- a/aboutMDHL.html
+++ b/aboutMDHL.html
@@ -17,12 +17,15 @@
 
 <body>
     <header>
-        <h1>Mighty Ducks Hockey League</h1>
+        <div id="might">
+            <img id="logo" src="/img/Logo_Mighty_ducks-01.png" alt="logo">
+            <h1>Mighty Ducks Hockey League</h1>
+        </div>
         <div id="header2">
-            <nav class="diseno2">
+            <nav>
                 <a href="./home.html">Home</a>
                 <a href="./game_info.html">Game Info</a>
-                <a href="./rules.html"> RULES OF PLAY</a>
+                <a href="./rules.html">Rules</a>
                 <a class="actual" href="#">About</a>
                 <a href="./contact.html">Contact</a>
             </nav>
@@ -31,44 +34,30 @@
 
     <main>
         <div id="titulo">
-            <h3 class="diseno1">About MDHL</h3>
-            <h3 class="diseno2">About</h3>
-            <img class="diseno1" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
+            <h3>About</h3>
         </div>
         <div id="contenido">
             <aside>
-                <img class="diseno2" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
-                <nav class="diseno1">
-                <a href="./home.html">Home</a>
-                    <a href="./game_info.html">Game Info</a>
-                    <a href="./rules.html"> RULES OF PLAY</a>
-                    <a class="actual" href="#">About MDHL</a>
-                    <a href="./contact.html">Contact</a>
-                </nav>
                 <figure>
                     <img id="imagenaside" src="/img/hockey_2.jpg" alt="imagen2">
                 </figure>
             </aside>
             <div class="section">
-                <article>
-                    <h4 class="about">Mision</h4>
-                    <p>To support young athletes living Chicago's northside neighborhood, who have an interest in
+                <dl>
+                    <dt>Mision</dt>
+                    <dd>To support young athletes living Chicago's northside neighborhood, who have an interest in
                         learning and playing soccer, with opportunities to learn and practice skills related to the game
-                        of hockey, specifically those skills around team cooperation and good sportsmanship</p>
-                </article>
-                <article>
-                    <h4 class="about">Vision</h4>
-                    <p>The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes
-                        through the building of character, self-discipline, and leadership.</p>
-                </article>
-                <article>
-                    <h4 class="about">General Information</h4>
-                    <p>The Mighty Ducks Soccer League was established in 1996 to provide athletes residing Chicago's
+                        of hockey, specifically those skills around team cooperation and good sportsmanship</dd>
+                    <dt>Vision</dt>
+                    <dd>The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes
+                        through the building of character, self-discipline, and leadership.</dd>
+                    <dt>General Information</dt>
+                    <dd>The Mighty Ducks Soccer League was established in 1996 to provide athletes residing Chicago's
                         northside neighborhoods an environment in which to learn and play hockey. To be a
                         member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside
                         neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
-                        parents and previous league members</p>
-                </article>
+                        parents and previous league members</dd>
+                </dl>
             </div>
         </div>
     </main>
