--- a/contact.html
+++ b/contact.html
@@ -9,20 +9,19 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <!-- diseño propio -->
     <link rel="stylesheet" href="/css/style.css">
-    <!-- diseño1 -->
-    <!-- <link rel="stylesheet" href="/css/diseno1.css"> -->
-    <!-- diseño2 -->
-    <!-- <link rel="stylesheet" href="/css/diseno2.css"> --> 
 </head>
 
 <body>
     <header>
-        <h1>Mighty Ducks Hockey League</h1>
+        <div id="might">
+            <img id="logo" src="/img/Logo_Mighty_ducks-01.png" alt="logo">
+            <h1>Mighty Ducks Hockey League</h1>
+        </div>
         <div id="header2">
-            <nav class="diseno2">
+            <nav>
                 <a href="./home.html">Home</a>
                 <a href="./game_info.html">Game Info</a>
-                <a href="./rules.html"> RULES OF PLAY</a>
+                <a href="./rules.html">Rules</a>
                 <a href="./aboutMDHL.html">About</a>
                 <a class="actual" href="#">Contact</a>
             </nav>
@@ -32,18 +31,9 @@
     <main>
         <div id="titulo">
             <h3>Contact</h3>
-            <img class="diseno1" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
         </div>
         <div id="contenido">
             <aside>
-                <img class="diseno2" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
-                <nav class="diseno1">
-                    <a href="./home.html">Home</a>
-                    <a href="./game_info.html">Game Info</a>
-                    <a href="./rules.html"> RULES OF PLAY</a>
-                    <a href="./aboutMDHL.html">About MDHL</a>
-                    <a class="actual" href="#">Contact</a>
-                </nav>
                 <figure>
                     <img id="imagenaside" src="/img/hockey_3.jpg" alt="imagen3">
                 </figure>
