--- a/rules.html
+++ b/rules.html
@@ -9,20 +9,19 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <!-- diseño propio -->
     <link rel="stylesheet" href="/css/style.css">
-    <!-- diseño1 -->
-    <!-- <link rel="stylesheet" href="/css/diseno1.css"> -->
-    <!-- diseño2 -->
-    <!-- <link rel="stylesheet" href="/css/diseno2.css"> -->
 </head>
 
 <body>
     <header>
-        <h1>Mighty Ducks Hockey League</h1>
+        <div id="might">
+            <img id="logo" src="/img/Logo_Mighty_ducks-01.png" alt="logo">
+            <h1>Mighty Ducks Hockey League</h1>
+        </div>
         <div id="header2">
-            <nav class="diseno2">
+            <nav>
                 <a href="./home.html">Home</a>
                 <a href="./game_info.html">Game Info</a>
-                <a class="actual" href="#"> RULES OF PLAY</a>
+                <a class="actual" href="#">Rules</a>
                 <a href="./aboutMDHL.html">About</a>
                 <a href="./contact.html">Contact</a>
             </nav>
@@ -32,26 +31,82 @@
     <main>
         <div id="titulo">
             <h3>RULES OF PLAY & POLICIES</h3>
-            <img class="diseno1" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
+            <h3 id="sub">IHF rules shall govern MDHL play except as modified herein.</h3>
         </div>
+
         <div id="contenido">
             <aside>
-                <img class="diseno2" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
-                <nav class="diseno1">
-                <a href="./home.html">Home</a>
-                    <a href="./game_info.html">Game Info</a>
-                    <a class="actual" href="#"> RULES OF PLAY</a>
-                    <a href="./about.html">About</a>
-                    <a href="./contact.html">Contact</a>
-                </nav>
                 <figure>
                     <img id="imagenaside" src="/img/hockey_3.jpg" alt="imagen3">
                 </figure>
             </aside>
+
             <div class="section">
-                <div id="contacto">
-                    <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
-                    <p>We reply to your email as soon as we can.</p>
+                <div id="rules">
+                    <dl>
+                        <dt>SPORTSMANSHIP</dt>
+                        <dd class="indent">
+                            The common interest that members of the Association share is to inspire
+                            youth to practice the ideals of sportsmanship and fair play. Any player, coach,
+                            team, parent, spectator, administrator or referee whose behavior detracts from
+                            this purpose is subject to disciplinary action regardless of technical hockey
+                            background, expertise, accomplishments or standing.
+                        <dt>IHF FIELD REGULATIONS</dt>
+                        <dd>
+                            <ol>
+                                <li class="indent">
+                                    <h5>DIMENSIONS.IHF</h5>
+                                    <p>
+                                        Law 1 provides for flexible external field dimensions within
+                                        a given maximum and minimum width and length. These dimensions should be
+                                        adhered to for all fields used by teams under 12 and older.
+                                    </p>
+                                </li>
+                                <li class="indent">
+                                    <h5>COMPETITION FIELDS.</h5>
+                                    <p>
+                                        Fields used within the competition program must be
+                                        a minimum of 100 x 60 yards.Leagues, districts or associations participating in
+                                        the state competition program that are unable to provide a field that meets these
+                                        minimum requirements must advise the State Competition Board which will
+                                        assign its Fields Committee to inspect the field and recommend to the Board
+                                        whether or not a waiver of the minimum dimensions should be granted. Teams
+                                        from leagues, districts or associations that are unable to provide an acceptable
+                                        field may be required to play all their games away.
+                                    </p>
+                                </li>
+                                <li class="indent">
+                                    <h5>FIELDS USED BY YOUNG AGE GROUPS</h5>
+                                </li>
+                            </ol>
+                            <ol class="k">
+                                <li class="indent">
+                                    U-6 play on a field approximately 20 X 40 yards with no penalty areas. Fields
+                                    for older age groups should be progressively larger.
+                                </li>
+                                <li class="indent">U-8 plays on a field 40-50 yards in length and 20-30 yards width.</li>
+                                <li class="indent">U-10 play on a field 70-80 yards in length and 40-50 yards in width.</li>
+                                <li class="indent">
+                                    In addition, fields used by young age groups may have their internal
+                                    dimensions and size of goal similarly modified.
+                                </li>
+                            </ol>
+                        </dd>
+                        <dt>ALL-PLAY</dt>
+                        <dd class="indent">
+                            All-play means that every recreation player on every team shall play atleast
+                            fifty percent of each game. Coaches in the competition program are encouraged
+                            to play their players 50% of each game.
+                            <ul class="circle">
+                                <li>
+                                    A Coach shall be permitted to not play a player 50% of each game under special
+                                    circumstances, e.g., unexcused absences from practice and/or games, ungentlemanly
+                                    conduct at practice and/or games, and injuries.
+                                </li>
+                            </ul>
+                        </dd>
+                    </dl>
+                    
                 </div>
             </div>
         </div>
