--- a/game_info.html
+++ b/game_info.html
@@ -9,20 +9,19 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <!-- diseño propio -->
     <link rel="stylesheet" href="/css/style.css">
-    <!-- diseño1 -->
-    <!-- <link rel="stylesheet" href="/css/diseno1.css"> -->
-    <!-- diseño2 -->
-    <!-- <link rel="stylesheet" href="/css/diseno2.css"> -->
 </head>
 
 <body>
     <header>
-        <h1>Mighty Ducks Hockey League</h1>
+        <div id="might">
+            <img id="logo" src="/img/Logo_Mighty_ducks-01.png" alt="logo">
+            <h1>Mighty Ducks Hockey League</h1>
+        </div>
         <div id="header2">
-            <nav class="diseno2">
+            <nav>
                 <a href="./home.html">Home</a>
                 <a class="actual" href="#">Game Info</a>
-                <a href="./rules.html"> RULES OF PLAY</a>
+                <a href="./rules.html">Rules</a>
                 <a href="./aboutMDHL.html">About</a>
                 <a href="./contact.html">Contact</a>
             </nav>
@@ -31,29 +30,92 @@
 
     <main>
         <div id="titulo">
-            <h3>Game Info</h3>
-            <img class="diseno1" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
+            <h3>Fall Schedule</h3>
+            <!-- <h3>* All games take place on Saturday.</h3> -->
         </div>
         <div id="contenido">
             <aside>
-                <img class="diseno2" src="/img/Logo_Mighty_ducks-01.png" alt="logo" width="120">
-                <nav class="diseno1">
-                    <a href="./home.html">Home</a>
-                    <a class="actual" href="#">Game Info</a>
-                    <a href="./rules.html"> RULES OF PLAY</a>
-                    <a href="./aboutMDHL.html">About</a>
-                    <a href="./contact.html">Contact</a>
-                </nav>
-                <figure>
+
                     <img id="imagenaside" src="/img/hockey_3.jpg" alt="imagen3">
-                </figure>
+
             </aside>
             <div class="section">
-                <div id="contacto">
-                    <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
-                    <p>We reply to your email as soon as we can.</p>
+                <table>
+                    <caption>* All games take place on Saturday.</caption>
+                    <thead>
+                        <tr>
+                            <th>SEPTEMBER</th>
+                            <th>Teams</th>
+                            <th>Location</th>
+                            <th>Times</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td rowspan="2">9/01</td>
+                            <td>U1 and U4</td>
+                            <td>AJ Katzenmaier</td>
+                            <td>9:30 a.m.</td>
+                        </tr>
+                        <tr>
+                            <td>U3 and U2</td>
+                            <td>Greenbay</td>
+                            <td>1:00 p.m.</td>
+                        </tr>
+                        <tr>
+                            <td rowspan="2">9/08</td>
+                            <td>U5 and U6</td>
+                            <td>Howard A Yeager</td>
+                            <td>9:30a.m</td>
+                        </tr>
+                        <tr>
+                            <td>U6 and U1</td>
+                            <td>Marjorie P Hart</td>
+                            <td>1:00 p.m.</td>
+                        </tr>
+                        <tr>
+                            <td rowspan="2">9/15
+                            <td>U2 and U4</td>
+                            <td>North</td>
+                            <td>9:30 a.m</td>
+                        </tr>
+                        <tr>
+                            <td>U3 and U5</td>
+                            <td>AJ Katzenmaier</td>
+                            <td>1:00 p.m.</td>
+                        </tr>
+                        <tr>
+                            <td rowspan="2">9/22</td>
+                            <td>U1 and U3</td>
+                            <td>South</td>
+                            <td>9:30 a.m</td>
+                        </tr>
+                        <tr>
+                            <td>U2 and U6</td>
+                            <td>Howard A Yeager</td>
+                            <td>1:00 p.m.</td>
+                        </tr>
+                        <tr>
+                            <td>9/29</td>
+                            <td>U4 and U5</td>
+                            <td>Greenbay</td>
+                            <td>9:30 a.m</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <div id="datos">
+                    <p><b>Facility Type:</b> Outdoor</p>
+                    <p><b>Additional Information:</b> If deemed necessary by MDHL james may be shortened or cancelled
+                        due to extreme weather conditions.</p>
+                    
+                    <div class="minfoot">
+                        <p><b>Please direct all questions to:</b> Michael Randall, League Coordinator</p>
+                        <p><b>Phone:</b>(630) 690-8132</p>
+                        <p><b>Email:</b> michael.randall@cchihockey.org</p>
+                    </div>
                 </div>
             </div>
+        </div>
         </div>
     </main>
 
