--- a/home.html
+++ b/home.html
@@ -17,12 +17,15 @@
 
 <body>
     <header>
-        <h1>Mighty Ducks Hockey League</h1>
+        <div id="might">
+            <img id="logo" src="/img/Logo_Mighty_ducks-01.png" alt="logo">
+            <h1>Mighty Ducks Hockey League</h1>
+        </div>
         <div id="header2">
-            <nav class="diseno2">
+            <nav>
                 <a class="actual" href="#">Home</a>
                 <a href="./game_info.html">Game Info</a>
-                <a href="./rules.html"> RULES OF PLAY</a>
+                <a href="./rules.html">Rules</a>
                 <a href="./aboutMDHL.html">About</a>
                 <a href="./contact.html">Contact</a>
             </nav>
@@ -32,18 +35,9 @@
     <main>
         <div id="titulo">
             <h3>Upcoming Events</h3>
-            <img class="diseno1" src="/img/Logo_Mighty_ducks-01.png" alt="logo">
         </div>
         <div id="contenido">
             <aside>
-                <img class="diseno2" src="/img/Logo_Mighty_ducks-01.png" alt="logo">
-                <nav class="diseno1">
-                    <a class="actual" href="#">Home</a>
-                    <a href="./game_info.html">Game Info</a>
-                    <a href="./rules.html"> RULES OF PLAY</a>
-                    <a href="./aboutMDHL.html">About MDHL</a>
-                    <a href="./contact.html">Contact</a>
-                </nav>
                 <figure>
                     <img id="imagenaside" src="/img/hockey_1.jpg" alt="imagen1">
                 </figure>
