task3 - update mas lindo

--- a/game_info.html
+++ b/game_info.html
@@ -35,9 +35,7 @@
         </div>
         <div id="contenido">
             <aside>
-
-                    <img id="imagenaside" src="/img/hockey_3.jpg" alt="imagen3">
-
+                    <img id="imagenaside" src="/img/hockey_2.jpg" alt="imagen2">
             </aside>
             <div class="section">
                 <table>
@@ -111,14 +109,11 @@
                     <div class="minfoot">
                         <p><b>Please direct all questions to:</b> Michael Randall, League Coordinator</p>
                         <p><b>Phone:</b>(630) 690-8132</p>
-                        <p><b>Email:</b> michael.randall@cchihockey.org</p>
+                        <p><b>Email:</b> <a href="mailto:mdhl@chihockey.org">michael.randall@cchihockey.org</a></p>
                     </div>
                 </div>
             </div>
         </div>
-        </div>
     </main>
-
 </body>
-
 </html>
