--- a/home.html
+++ b/home.html
@@ -38,23 +38,21 @@
         </div>
         <div id="contenido">
             <aside>
-                <figure>
-                    <img id="imagenaside" src="/img/hockey_1.jpg" alt="imagen1">
-                </figure>
+                    <img id="imagenaside" src="/img/hockey_1.jpg" alt="imagen2">
             </aside>
 
             <div class="section">
                 <article>
                     <h4>August 4</h4>
-                    <p>MDSL Fundraiser</p>
+                    <p class="indent">MDSL Fundraiser</p>
                 </article>
                 <article>
                     <h4>August 16</h4>
-                    <p>Season Kick-off: Meet the Teams</p>
+                    <p class="indent">Season Kick-off: Meet the Teams</p>
                 </article>
                 <article>
                     <h4>September 1</h4>
-                    <p>MDSL Fundraiser</p>
+                    <p class="indent">MDSL Fundraiser</p>
                 </article>
             </div>
         </div>
