--- a/game_info.html
+++ b/game_info.html
@@ -35,7 +35,7 @@
         </div>
         <div id="contenido">
             <aside>
-                    <img id="imagenaside" src="/img/hockey_2.jpg" alt="imagen2">
+                <img id="imagenaside" src="/img/hockey_2.jpg" alt="imagen2">
             </aside>
             <div class="section">
                 <table>
@@ -101,11 +101,37 @@
                         </tr>
                     </tbody>
                 </table>
+                <div id="mapas">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11799.122572613156!2d-87.8628046!3d42.3258772!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcf2bbe275c6da815!2sAJ%20Katzenmaier%20Academy!5e0!3m2!1ses-419!2sar!4v1675468956628!5m2!1ses-419!2sar"
+                        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11801.080246623287!2d-87.8538811!3d42.3154383!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses-419!2sar!4v1675469278494!5m2!1ses-419!2sar"
+                        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11798.878466491737!2d-87.8456879!3d42.3271787!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x9a4d5f9aafd42e02!2sMarjorie%20P%20Hart%20School!5e0!3m2!1ses-419!2sar!4v1675469692699!5m2!1ses-419!2sar"
+                        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11800.042412557958!2d-87.8688817!3d42.3209726!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x740a7a7d548adce1!2sGreen%20Bay%20School%20(Pre-K)!5e0!3m2!1ses-419!2sar!4v1675470025073!5m2!1ses-419!2sar"
+                        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerp'S (2 ed páth pst olicy="no-referrer-when-downgrade"></iframe>
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11877.33928145837!2d-87.65485621261205!3d41.90716053861899!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd33af14860a5%3A0x5736e62f19086c62!2sNorth%20Elementary!5e0!3m2!1ses-419!2sus!4v1675482907956!5m2!1ses-419!2sus"
+                            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d16931.531041812148!2d-87.86670154457485!3d42.317174614872116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac2135a21%3A0x8ce88e90b96bbec1!2sSouth%20Elementary%20School%20(K-5)!5e0!3m2!1ses-419!2sus!4v1675483013966!5m2!1ses-419!2sus"
+                                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+                </div>
                 <div id="datos">
                     <p><b>Facility Type:</b> Outdoor</p>
                     <p><b>Additional Information:</b> If deemed necessary by MDHL james may be shortened or cancelled
                         due to extreme weather conditions.</p>
-                    
+
                     <div class="minfoot">
                         <p><b>Please direct all questions to:</b> Michael Randall, League Coordinator</p>
                         <p><b>Phone:</b>(630) 690-8132</p>
@@ -116,4 +142,5 @@
         </div>
     </main>
 </body>
+
 </html>
