task4 - registro cambios

--- a/rules.html
+++ b/rules.html
@@ -23,6 +23,7 @@
                 <a href="./game_info.html">Game Info</a>
                 <a class="actual" href="#">Rules</a>
                 <a href="./aboutMDHL.html">About</a>
+                <a href="./registration.html">Registration</a>
                 <a href="./contact.html">Contact</a>
             </nav>
         </div>
