--- a/aboutMDHL.html
+++ b/aboutMDHL.html
@@ -27,6 +27,7 @@
                 <a href="./game_info.html">Game Info</a>
                 <a href="./rules.html">Rules</a>
                 <a class="actual" href="#">About</a>
+                <a href="./registration.html">Registration</a>
                 <a href="./contact.html">Contact</a>
             </nav>
         </div>
