--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,7 @@
                 <a href="./game_info.html">Game Info</a>
                 <a href="./rules.html">Rules</a>
                 <a href="./aboutMDHL.html">About</a>
+                <a href="./registration.html">Registration</a>
                 <a class="actual" href="#">Contact</a>
             </nav>
         </div>
