--- a/registration.html
+++ b/registration.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 
 <head>
     <meta charset="UTF-8">
@@ -23,7 +23,8 @@
                 <a href="./game_info.html">Game Info</a>
                 <a href="./rules.html">Rules</a>
                 <a href="./aboutMDHL.html">About</a>
-                <a class="actual" href="#">Contact</a>
+                <a class="actual" href="#">Registration</a>
+                <a href="./contact.html">Contact</a>
             </nav>
         </div>
     </header>
@@ -39,107 +40,216 @@
                 </figure>
             </aside>
             <div class="section">
-                <div id="contacto">
+                <div>
                     <form method="get" action="./show_data.html">
                         <fieldset>
-                            <label for="name">Player's First Name:</label>
-                            <input type="text" name="name" id="name">
-                            <label for="lastname">Last Name:</label>
-                            <input type="text" name="lastname" id="lastname">
-                            <label for="street">Street Address:</label>
-                            <input type="text" name="street" id="street">
-                            <label for="city">City:</label>
-                            <input type="text" name="city" id="city">
-                            <label for="zip">Zip Code:</label>
-                            <input type="text" name="zip" id="zip">
-                            <label for="birth">Birth Date(mm/dd/yyyy):</label>
-                            <input type="text" name="birth" id="birth">
-                            <p>Gender:</p>
-                            <label for="female">Female</label>
-                            <input type="radio" name="gender" id="female">
-                            <label for="male">Male</label>
-                            <input type="radio" name="gender" id="male">
-                            <p>Grade:</p>
-                            <input type="radio" name="grade" id="pre-k">
-                            <label for="pre-k">Pre-School</label>
-                            <input type="radio" name="grade" id="1st">
-                            <label for="1st">1st</label>
-                            <input type="radio" name="grade" id="2nd">
-                            <label for="2nd">2nd</label>
-                            <input type="radio" name="grade" id="3th">
-                            <label for="3th">3th</label>
-                            <input type="radio" name="grade" id="4th">
-                            <label for="4th">4th</label>
-                            <input type="radio" name="grade" id="5th">
-                            <label for="5th">5th</label>
+                            <div class="personal">
+                                <div class="doble">
+                                    <div>
+                                        <label for="name">Player's First Name:</label>
+                                        <input type="text" name="name" id="name">
+                                    </div>
+                                    <div>
+                                        <label for="lastname">Last Name:</label>
+                                        <input type="text" name="lastname" id="lastname">
+                                    </div>
+                                </div>
+                                <div>
+                                    <label for="street">Street Address:</label>
+                                    <input type="text" name="street" id="street">
+                                </div>
+                                <div class="doble">
+                                    <div>
+                                        <label for="city">City:</label>
+                                        <input type="text" name="city" id="city">
+                                    </div>
+                                    <div>
+                                        <label for="zip">Zip Code:</label>
+                                        <input type="text" name="zip" id="zip">
+                                    </div>
+                                </div>
+                                <div class="doble">
+                                    <div>
+                                        <label for="birth">Birth Date(mm/dd/yyyy):</label>
+                                        <input type="date" name="birth" id="birth">
+                                    </div>
+                                    <div class="row">
+                                        Gender:
+                                            <label for="female">Female</label>
+                                            <input type="radio" name="gender" id="female">
+                                            <label for="male">Male</label>
+                                            <input type="radio" name="gender" id="male">
+                                    </div>
+                                </div>
+
+                                <div>
+                                    <p>Grade:</p>
+                                    <div class="row">
+                                        <div>
+                                            <input type="radio" name="grade" id="pre-k">
+                                            <label for="pre-k">Pre-School</label>
+                                        </div>
+                                        <div>
+                                            <input type="radio" name="grade" id="1st">
+                                            <label for="1st">1st</label>
+                                        </div>
+                                        <div>
+                                            <input type="radio" name="grade" id="2nd">
+                                            <label for="2nd">2nd</label>
+                                        </div>
+                                        <div>
+                                            <input type="radio" name="grade" id="3th">
+                                            <label for="3th">3th</label>
+                                        </div>
+                                        <div>
+                                            <input type="radio" name="grade" id="4th">
+                                            <label for="4th">4th</label>
+                                        </div>
+                                        <div>
+                                            <input type="radio" name="grade" id="5th">
+                                            <label for="5th">5th</label>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </fieldset>
 
                         <fieldset>
                             <legend>Which elementary school do you live near?</legend>
                             <h4>Closest School:</h4>
-                            <input type="radio" name="school" id="katzenmaier">
-                            <label for="katzenmaier">AJ Katzenmaier</label>
-                            <input type="radio" name="school" id="greenbay">
-                            <label for="greenbay">Greenbay</label>
-                            <input type="radio" name="school" id="yeager">
-                            <label for="yeager">Howard A Yeager</label>
-                            <input type="radio" name="school" id="hart">
-                            <label for="hart">Marjorie P Hart</label>
-                            <input type="radio" name="school" id="north">
-                            <label for="north">North Elementary</label>
-                            <input type="radio" name="school" id="south">
-                            <label for="south">South Elementary</label>
+                            <div class="colums">
+                                <div>
+                                    <div>
+                                        <input type="radio" name="school" id="katzenmaier">
+                                        <label for="katzenmaier">AJ Katzenmaier</label>
+                                    </div>
+                                    <div>
+                                        <input type="radio" name="school" id="greenbay">
+                                        <label for="greenbay">Greenbay</label>
+                                    </div>
+                                    <div>
+                                        <input type="radio" name="school" id="yeager">
+                                        <label for="yeager">Howard A Yeager</label>
+                                    </div>
+                                </div>
+                                <div>
+                                    <div>
+                                        <input type="radio" name="school" id="hart">
+                                        <label for="hart">Marjorie P Hart</label>
+                                    </div>
+                                    <div>
+                                        <input type="radio" name="school" id="north">
+                                        <label for="north">North Elementary</label>
+                                    </div>
+                                    <div>
+                                        <input type="radio" name="school" id="south">
+                                        <label for="south">South Elementary</label>
+                                    </div>
+                                </div>
+                            </div>
                         </fieldset>
 
-                        <fieldset>
+                        <fieldset id="position">
                             <legend>What position(s) do you normally play? (check all that apply)</legend>
-                            <input type="checkbox" name="position" id="foward">
-                            <label for="foward">foward</label>
-                            <input type="checkbox" name="position" id="defense">
-                            <label for="defense">defense</label>
-                            <input type="checkbox" name="position" id="midfield">
-                            <label for="midfield">midfield</label>
-                            <input type="checkbox" name="position" id="goalkeeper">
-                            <label for="goalkeeper">goalkeeper</label>
+                            <div class="row">
+                                <div>
+                                    <input type="checkbox" name="position" id="foward">
+                                    <label for="foward">foward</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" name="position" id="defense">
+                                    <label for="defense">defense</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" name="position" id="midfield">
+                                    <label for="midfield">midfield</label>
+                                </div>
+                                <div>
+                                    <input type="checkbox" name="position" id="goalkeeper">
+                                    <label for="goalkeeper">goalkeeper</label>
+                                </div>
+                            </div>
                         </fieldset>
 
                         <fieldset>
                             <legend>Uniform Size:</legend>
-                            <input type="radio" name="size" id="youthS">
-                            <label for="youthS">Youth Smal</label>
-                            <input type="radio" name="size" id="youthM">
-                            <label for="youthM">Youth Medium</label>
-                            <input type="radio" name="size" id="youthL">
-                            <label for="youthL">Youth Large</label>
-                            <input type="radio" name="size" id="s">
-                            <label for="hart">Small</label>
-                            <input type="radio" name="size" id="m">
-                            <label for="m">Medium</label>
-                            <input type="radio" name="size" id="l">
-                            <label for="l">Large</label>
-                            <input type="radio" name="size" id="xl">
-                            <label for="xl">Extra-Large</label>
+                            <div class="colums">
+                                <div>
+                                    <div>
+                                        <input type="radio" name="size" id="youthS">
+                                        <label for="youthS">Youth Smal</label>
+                                    </div>
+                                    <div>
+                                        <input type="radio" name="size" id="youthM">
+                                        <label for="youthM">Youth Medium</label>
+                                    </div>
+                                    <div>
+                                        <input type="radio" name="size" id="youthL">
+                                        <label for="youthL">Youth Large</label>
+                                    </div>
+                                </div>
+                                <div>
+                                    <div>
+                                        <input type="radio" name="size" id="s">
+                                        <label for="hart">Small</label>
+                                    </div>
+                                    <div>
+                                        <input type="radio" name="size" id="m">
+                                        <label for="m">Medium</label>
+                                    </div>
+                                    <div>
+                                        <input type="radio" name="size" id="l">
+                                        <label for="l">Large</label>
+                                    </div>
+                                    <div>
+                                        <input type="radio" name="size" id="xl">
+                                        <label for="xl">Extra-Large</label>
+                                    </div>
+                                </div>
+                            </div>
                         </fieldset>
                         <fieldset>
                             <legend>Permission to Play</legend>
-                            <p>
-                                I, the parent or guardian of the minor registrant, agree that the registrant and I will abide by all the
-                                rules of the Mighty Ducks Hockey League (MDHL). In recognizing the possibility of physical injury
-                                associated with hockey and in consideration for the “League” accepting the registrant for its
-                                hockey programs and activities, I hereby release, discharge, and/or otherwise indemnify MDHL,
-                                their employees and associated personnel and volunteers,including the facilities used for
-                                practices and games, against any claim by or on behalf of the registrant as a result of the
-                                registrant’s participation in the programand/orbeing transported to or from MDHL sponsored
-                                activities,which transportation
-                            </p>
-                            <p>
-                                By signing below, I here by agree and authorize the above.In addition, by signing below, I also
-                                acknowledge that I have read the cancellation policy and agree to its terms.
-                            </p>
-                            <label for="signature">Parent/GuardianSignature:</label>
-                            <input type="text" name="signature" id="signature">
-                            <label for="date">Date:</label>
-                            <input type="text" name="date" id="date">
+                            <div>
+                                <p>
+                                    I, the parent or guardian of the minor registrant, agree that the registrant and I
+                                    will
+                                    abide by all the
+                                    rules of the Mighty Ducks Hockey League (MDHL). In recognizing the possibility of
+                                    physical injury
+                                    associated with hockey and in consideration for the “League” accepting the
+                                    registrant
+                                    for its
+                                    hockey programs and activities, I hereby release, discharge, and/or otherwise
+                                    indemnify
+                                    MDHL,
+                                    their employees and associated personnel and volunteers,including the facilities
+                                    used
+                                    for
+                                    practices and games, against any claim by or on behalf of the registrant as a result
+                                    of
+                                    the
+                                    registrant’s participation in the programand/orbeing transported to or from MDHL
+                                    sponsored
+                                    activities,which transportation
+                                </p>
+                                <p>
+                                    By signing below, I here by agree and authorize the above.In addition, by signing
+                                    below,
+                                    I also
+                                    acknowledge that I have read the cancellation policy and agree to its terms.
+                                </p>
+                            </div>
+                            <div class="firma">
+                                <div>
+                                    <label for="signature">Parent/GuardianSignature:</label>
+                                    <input type="text" name="signature" id="signature">
+                                </div>
+                                <div>
+                                    <label for="date">Date:</label>
+                                    <input type="date" name="date" id="date">
+                                </div>
+                            </div>
                         </fieldset>
                         <input type="submit" value="Send">
                     </form>
